# OpenMPExample

./: CMakeLists.txt  Makefile  README.md  example.cpp  openmp_example.cpp  openmp_function_example.cpp
